2007-05-17  Vincent Untz  <vuntz@gnome.org>

	* libmenu/canonicalize.c: (menu_realpath):
	* libmenu/entry-directories.c: (cached_dir_lookup),
	(cached_dir_load_entries_recursive),
	(entry_directory_foreach_recursive):
	* libmenu/gmenu-tree.c: (find_path),
	(gmenu_tree_get_directory_from_path), (append_directory_path),
	(add_menu_for_legacy_dir), (find_submenu):
	* libmenu/menu-monitor-fam.c: (queue_fam_event):
	* libmenu/menu-monitor-inotify.c: (handle_inotify_event):
	Use G_DIR_SEPARATOR instead of '/'

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.19.3

==================== 2.19.2 ====================

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.19.2.

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* autogen.sh: require automake 1.9
	Fix bug #344047
	* desktop-directories/Makefile.am: remove trailing spaces

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* layout/applications.menu: don't require Application category for the
	Other submenu, since this is not a valid category.
	Should fix bug #331142

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* desktop-directories/Desktop.directory.in: s/Desktop/System/ since
	the menu got renamed.
	Fix for bug #367551

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* desktop-directories/Settings-Accessibility.directory.in:
	* desktop-directories/Accessibility.directory.in:
	* layout/preferences.menu:
	* layout/applications.menu: s/Accessibility/Universal Access/
	Fix bug #376324

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* desktop-directories/*: use icons from icon naming spec
	Fix bug #396994

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* simple-editor/Makefile.am:
	* simple-editor/gmenu-simple-editor.in: use the PYTHON found by
	configure instead of "env python"
	Fix bug #343978

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* layout/settings.menu: use <Layout> to put Preferences before
	Administration
